tests/testdata/negative/undefined_var.go
package main
func main() {
  fmt.Println(z);
}
